--- a/activities.html
+++ b/activities.html
@@ -21,6 +21,7 @@
         <li><a href="./index.html">Home</a></li>
         <li><a href="./activities.html">Activities</a></li>
         <li><a href="#">Skills</a></li>
+        <li><a href="#">Skills</a></li>
       </ul>
     </nav>
     <div class="">
